Projeto1/KubernetesNginx/mongo.yaml
### Arquivo dedicado a criação de um deployment de mongoDB que seraá usado pela app

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo  
          image: mongo:4.4
          ports:
            - containerPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: mongo                ### mongo é o nome do serviço deeefinido no arquivo "app.py" da aplicação e deve ser o mesmo usado nesse campo, otherwise it wont work
spec:
  type: ClusterIP            ### CLusterIP permite a comunicação apenas de dentro do cluster, entre o pod web-app e o mongo por exemplo
  selector:
    app: mongo               ### Esse atributo indica o label dos pods do deploy mongo
  ports:
    - port: 27017            ### 27017 é a porta padrão do mongdb, estabelecida no "mongoDeploy.yaml"
